--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,8 +4,10 @@
         <meta charset="UTF-8">
 
         <title>Gig Tracker</title>
-        <link rel="icon" type="image/png" href="./favicon.png"/>
+        <link rel="icon" type="image/png" href="../public/"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+       
     </head>
     <body>
         <div id='app'></div>
